--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body{
 #page-header{
   border-style: solid;
   border-width: thin;
+  height: 50px;
+  width: auto;
   background-color: #f5ce00;
   font-family: sans-serif;
 }
@@ -41,7 +43,7 @@ input[type="submit"]{
   width: 100%;
   height: 100%;
   margin: 0 auto;
-  margin-top: 10px;
+  margin-top: 0px;
   border-style: solid;
   border-width: 1px;
 }
@@ -79,7 +81,7 @@ input[type="submit"]{
   background-color: #d7d4dd;
   width: 1220px;
   margin: 50px auto;
-  border: 3px solid;
+  border:1px solid;
 }
 
 
