--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ input[type="submit"]{
   width: 1220px;
   margin: 50px auto;
   border:1px solid;
+  text-align: margin-left;
 }
 
 
@@ -94,4 +95,10 @@ input[name="btnCadastro"]{
   height: 25px;
   cursor: pointer;
   float: right;
+}
+
+
+label.input{
+  display: inline-block;
+  width: 90px;
 }
