Tela de Saldo e Extrato e Ajustes de Input

--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,33 @@ form{
   margin-top: 15px;
 }
 
-input[type="text"]{
-  width: 85px;
-  height: 25px;
+
+input[type="date"]{
+  width: 120px;
+  height: 30px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-sizing: border-box;
+  position: absolute;
+	left: 280px;
+}
+
+
+input[type="email"]{
+  width: 400px;
+  height: 30px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  position: absolute;
+	left: 280px;
+}
+
+input[type="text"]{
+  width: 400px;
+  height: 30px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  position: absolute;
+	left: 280px;
 }
 
 input[type="submit"]{
@@ -80,8 +101,8 @@ input[type="submit"]{
 .fancy {
   background-color: #d7d4dd;
   width: 1220px;
-  margin: 50px auto;
-  border:1px solid;
+  margin: 100px auto;
+  border:3px solid;
   text-align: margin-left;
 }
 
@@ -97,8 +118,21 @@ input[name="btnCadastro"]{
   float: right;
 }
 
+input[name="cod-barras"]{
+  width: 85px;
+  height: 25px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 
-input[name="input"]{
-  
+}
 
+table{
+
+  text-align: center;
+  width: 600px;
+}
+
+.box-saldo{
+  margin: 50px;
 }
